# rk3566-

./: .gitignore  CMakeLists.txt  README.md  main.cpp
app/: app_runtime.cpp  app_runtime.h  camera_service.cpp  camera_service.h  ota_manager.cpp  ota_manager.h  vision_worker.cpp  vision_worker.h
capture/: frame_ref.h  v4l2_capture.cpp  v4l2_capture.h
deploy/: S90access  access_install.sh  ota_apply.sh  run.sh  start.sh  version.json
deploy/lib/: libopencv_core.so.411  libopencv_imgproc.so.411
deploy/models/: det_500m_320.rknn
deploy/pkg_0.1.1/: start.sh
deploy/pkg_0.1.1/lib/: libdrm.so.2.4.0
drm/: ..install.cmd
models/: det_500m_static_320.onnx
opencv_process/: arcface_cvdnn.cpp  arcface_cvdnn.h  face_align.cpp  face_align.h  face_types.h  scrfd_detector_cvdnn.cpp  scrfd_detector_cvdnn.h
rga/: rga_preprocess.cpp  rga_preprocess.h  rga_worker.cpp  rga_worker.h
rknn/: arcface_rknn.cpp  arcface_rknn.h  rknn_model.cpp  rknn_model.h  scrfd_detector_rknn.cpp  scrfd_detector_rknn.h
ui/: ui_app.cpp  ui_app.h  ui_controller.cpp  ui_controller.h  ui_frame_packet.h  ui_model.cpp  ui_model.h  ui_navigator.cpp  ui_navigator.h  ui_runtime.cpp  ui_runtime.h  ui_types.h
ui/screens/: screen_enroll.cpp  screen_enroll.h  screen_manage.cpp  screen_manage.h  screen_ota.cpp  screen_ota.h  screen_recog.cpp  screen_recog.h
utils/: calc_off.py  face_db.cpp  face_db.h  fixed_block_pool.h  thread_safe_queue.h
